Working with Inline Styles

--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -8,3 +8,12 @@
   padding: 16px;
   text-align: center;
 }
+
+/* Global button style */
+/* .button {
+  background-color: white;
+  font: inherit;
+  border: 1px solid blue;
+  padding: 8px;
+  cursor: pointer;
+} */
