Introducing Styled Components

--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -1,6 +1,6 @@
 /* Whatever style we write here will be globally available, it not for our Person Component only */
 
-.Person {
+/* .Person {
   width: 60%;
   margin: 16px auto;
   border: 1px solid #eee;
@@ -8,6 +8,12 @@
   padding: 16px;
   text-align: center;
 }
+
+@media (min-width: 500px) {
+  .Person {
+    width: 450px;
+  }
+} */
 
 /* Global button style */
 /* .button {
